ref_build/TyCParser.py
# Generated from D:/DH/HK252/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'continue'", 
                     "'default'", "'else'", "'for'", "'if'", "'return'", 
                     "'struct'", "'switch'", "'while'", "'int'", "'float'", 
                     "'string'", "'void'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'||'", 
                     "'&&'", "'!'", "'++'", "'--'", "'='", "'.'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FOR", "IF", "RETURN", "STRUCT", 
                      "SWITCH", "WHILE", "INT_TYPE", "FLOAT_TYPE", "STRING_TYPE", 
                      "VOID_TYPE", "ADD_OP", "MIN_OP", "MULT_OP", "DIV_OP", 
                      "MOD_OP", "EQ_OP", "NEQ_OP", "LESS_OP", "GREAT_OP", 
                      "LEQ_OP", "GEQ_OP", "OR_OP", "AND_OP", "NOT_OP", "INC_OP", 
                      "DEC_OP", "ASS_OP", "MEMACC_OP", "LROUND_BRACK", "RROUND_BRACK", 
                      "LSQUARE_BRACK", "RSQUARE_BRACK", "LCURLY_BRACK", 
                      "RCURLY_BRACK", "SEMICOLON", "COMMA", "COLON", "ID", 
                      "INT", "FLOAT", "STRING", "NEWLINE", "WS", "COMMENT", 
                      "LINE_COMMENT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_prog_stat_list = 1
    RULE_prog_stat = 2
    RULE_func_decl = 3
    RULE_param_list = 4
    RULE_param = 5
    RULE_param_type = 6
    RULE_return_type = 7
    RULE_struct_decl = 8
    RULE_struct_var_decl_list = 9
    RULE_struct_var_decl_stat = 10
    RULE_struct_var_type = 11
    RULE_struct_lit = 12
    RULE_stat_list = 13
    RULE_stat = 14
    RULE_var_decl_list = 15
    RULE_var_decl_stat = 16
    RULE_var_decl_expr = 17
    RULE_var_type = 18
    RULE_block_stat = 19
    RULE_if_stat = 20
    RULE_main_if_stat = 21
    RULE_else_if_stat = 22
    RULE_while_stat = 23
    RULE_for_stat = 24
    RULE_for_init_stat = 25
    RULE_for_cond_stat = 26
    RULE_for_update_stat = 27
    RULE_switch_stat = 28
    RULE_case_expr_list = 29
    RULE_case_expr = 30
    RULE_default_case_expr = 31
    RULE_break_stat = 32
    RULE_continue_stat = 33
    RULE_return_stat = 34
    RULE_expr_stat = 35
    RULE_lvalue = 36
    RULE_expr_list = 37
    RULE_expr = 38
    RULE_assign_expr = 39
    RULE_inc_expr = 40
    RULE_dec_expr = 41
    RULE_arg_list = 42
    RULE_arg = 43
    RULE_bin_op = 44
    RULE_un_op = 45
    RULE_pre_op = 46
    RULE_post_op = 47

    ruleNames =  [ "program", "prog_stat_list", "prog_stat", "func_decl", 
                   "param_list", "param", "param_type", "return_type", "struct_decl", 
                   "struct_var_decl_list", "struct_var_decl_stat", "struct_var_type", 
                   "struct_lit", "stat_list", "stat", "var_decl_list", "var_decl_stat", 
                   "var_decl_expr", "var_type", "block_stat", "if_stat", 
                   "main_if_stat", "else_if_stat", "while_stat", "for_stat", 
                   "for_init_stat", "for_cond_stat", "for_update_stat", 
                   "switch_stat", "case_expr_list", "case_expr", "default_case_expr", 
                   "break_stat", "continue_stat", "return_stat", "expr_stat", 
                   "lvalue", "expr_list", "expr", "assign_expr", "inc_expr", 
                   "dec_expr", "arg_list", "arg", "bin_op", "un_op", "pre_op", 
                   "post_op" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CONTINUE=4
    DEFAULT=5
    ELSE=6
    FOR=7
    IF=8
    RETURN=9
    STRUCT=10
    SWITCH=11
    WHILE=12
    INT_TYPE=13
    FLOAT_TYPE=14
    STRING_TYPE=15
    VOID_TYPE=16
    ADD_OP=17
    MIN_OP=18
    MULT_OP=19
    DIV_OP=20
    MOD_OP=21
    EQ_OP=22
    NEQ_OP=23
    LESS_OP=24
    GREAT_OP=25
    LEQ_OP=26
    GEQ_OP=27
    OR_OP=28
    AND_OP=29
    NOT_OP=30
    INC_OP=31
    DEC_OP=32
    ASS_OP=33
    MEMACC_OP=34
    LROUND_BRACK=35
    RROUND_BRACK=36
    LSQUARE_BRACK=37
    RSQUARE_BRACK=38
    LCURLY_BRACK=39
    RCURLY_BRACK=40
    SEMICOLON=41
    COMMA=42
    COLON=43
    ID=44
    INT=45
    FLOAT=46
    STRING=47
    NEWLINE=48
    WS=49
    COMMENT=50
    LINE_COMMENT=51
    ILLEGAL_ESCAPE=52
    UNCLOSE_STRING=53
    ERROR_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prog_stat_list(self):
            return self.getTypedRuleContext(TyCParser.Prog_stat_listContext,0)


        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.prog_stat_list()
            self.state = 97
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prog_stat_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prog_stat(self):
            return self.getTypedRuleContext(TyCParser.Prog_statContext,0)


        def prog_stat_list(self):
            return self.getTypedRuleContext(TyCParser.Prog_stat_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_prog_stat_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg_stat_list" ):
                return visitor.visitProg_stat_list(self)
            else:
                return visitor.visitChildren(self)




    def prog_stat_list(self):

        localctx = TyCParser.Prog_stat_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog_stat_list)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 13, 14, 15, 16, 44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.prog_stat()
                self.state = 100
                self.prog_stat_list()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prog_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(TyCParser.Func_declContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(TyCParser.Struct_declContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_prog_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg_stat" ):
                return visitor.visitProg_stat(self)
            else:
                return visitor.visitChildren(self)




    def prog_stat(self):

        localctx = TyCParser.Prog_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_prog_stat)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 14, 15, 16, 44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.func_decl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.struct_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(TyCParser.Return_typeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LROUND_BRACK(self):
            return self.getToken(TyCParser.LROUND_BRACK, 0)

        def param_list(self):
            return self.getTypedRuleContext(TyCParser.Param_listContext,0)


        def RROUND_BRACK(self):
            return self.getToken(TyCParser.RROUND_BRACK, 0)

        def block_stat(self):
            return self.getTypedRuleContext(TyCParser.Block_statContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = TyCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.return_type()
                self.state = 110
                self.match(TyCParser.ID)
                self.state = 111
                self.match(TyCParser.LROUND_BRACK)
                self.state = 112
                self.param_list()
                self.state = 113
                self.match(TyCParser.RROUND_BRACK)
                self.state = 114
                self.block_stat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(TyCParser.ID)
                self.state = 117
                self.match(TyCParser.LROUND_BRACK)
                self.state = 118
                self.param_list()
                self.state = 119
                self.match(TyCParser.RROUND_BRACK)
                self.state = 120
                self.block_stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(TyCParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def param_list(self):
            return self.getTypedRuleContext(TyCParser.Param_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = TyCParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param_list)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.param()
                self.state = 125
                self.match(TyCParser.COMMA)
                self.state = 126
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.param()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_type(self):
            return self.getTypedRuleContext(TyCParser.Param_typeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = TyCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.param_type()
            self.state = 133
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(TyCParser.INT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(TyCParser.STRING_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(TyCParser.FLOAT_TYPE, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_type" ):
                return visitor.visitParam_type(self)
            else:
                return visitor.visitChildren(self)




    def param_type(self):

        localctx = TyCParser.Param_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17592186101760) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_type(self):
            return self.getTypedRuleContext(TyCParser.Param_typeContext,0)


        def VOID_TYPE(self):
            return self.getToken(TyCParser.VOID_TYPE, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_return_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = TyCParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_return_type)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 14, 15, 44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.param_type()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(TyCParser.VOID_TYPE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def LCURLY_BRACK(self):
            return self.getToken(TyCParser.LCURLY_BRACK, 0)

        def struct_var_decl_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_decl_listContext,0)


        def RCURLY_BRACK(self):
            return self.getToken(TyCParser.RCURLY_BRACK, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_decl" ):
                return visitor.visitStruct_decl(self)
            else:
                return visitor.visitChildren(self)




    def struct_decl(self):

        localctx = TyCParser.Struct_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_struct_decl)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(TyCParser.STRUCT)
                self.state = 142
                self.match(TyCParser.ID)
                self.state = 143
                self.match(TyCParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(TyCParser.STRUCT)
                self.state = 145
                self.match(TyCParser.ID)
                self.state = 146
                self.match(TyCParser.LCURLY_BRACK)
                self.state = 147
                self.struct_var_decl_list()
                self.state = 148
                self.match(TyCParser.RCURLY_BRACK)
                self.state = 149
                self.match(TyCParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_var_decl_stat(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_decl_statContext,0)


        def struct_var_decl_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_decl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_var_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_var_decl_list" ):
                return visitor.visitStruct_var_decl_list(self)
            else:
                return visitor.visitChildren(self)




    def struct_var_decl_list(self):

        localctx = TyCParser.Struct_var_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_struct_var_decl_list)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 14, 15, 44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.struct_var_decl_stat()
                self.state = 154
                self.struct_var_decl_list()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_var_decl_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_var_type(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_typeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_var_decl_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_var_decl_stat" ):
                return visitor.visitStruct_var_decl_stat(self)
            else:
                return visitor.visitChildren(self)




    def struct_var_decl_stat(self):

        localctx = TyCParser.Struct_var_decl_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_struct_var_decl_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.struct_var_type()
            self.state = 160
            self.match(TyCParser.ID)
            self.state = 161
            self.match(TyCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(TyCParser.INT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(TyCParser.STRING_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(TyCParser.FLOAT_TYPE, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_var_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_var_type" ):
                return visitor.visitStruct_var_type(self)
            else:
                return visitor.visitChildren(self)




    def struct_var_type(self):

        localctx = TyCParser.Struct_var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_struct_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17592186101760) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY_BRACK(self):
            return self.getToken(TyCParser.LCURLY_BRACK, 0)

        def expr_list(self):
            return self.getTypedRuleContext(TyCParser.Expr_listContext,0)


        def RCURLY_BRACK(self):
            return self.getToken(TyCParser.RCURLY_BRACK, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_lit" ):
                return visitor.visitStruct_lit(self)
            else:
                return visitor.visitChildren(self)




    def struct_lit(self):

        localctx = TyCParser.Struct_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_struct_lit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(TyCParser.LCURLY_BRACK)
            self.state = 166
            self.expr_list()
            self.state = 167
            self.match(TyCParser.RCURLY_BRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(TyCParser.StatContext,0)


        def stat_list(self):
            return self.getTypedRuleContext(TyCParser.Stat_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_stat_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_list" ):
                return visitor.visitStat_list(self)
            else:
                return visitor.visitChildren(self)




    def stat_list(self):
